automate creation of all areal rasters... after 3 arc-minutes they start to take a while

--- a/Raster Dataset Processing/Creating base rasters.ipynb
+++ b/Raster Dataset Processing/Creating base rasters.ipynb
@@ -177,7 +177,20 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "### Create areal weighted rasters\n",
     "# https://waterprogramming.wordpress.com/2015/06/09/using-arcpy-to-calculate-area-weighted-averages-of-gridded-spatial-data-over-political-units-part-2/\n",
@@ -188,8 +201,10 @@
     "# http://unidata.github.io/netcdf4-python/#section1\n",
     "from netCDF4 import Dataset\n",
     "import numpy as np\n",
+    "import os\n",
     "from pyproj import Proj\n",
-    "from shapely.geometry import shape\n",
+    "# Didn't end up using this:\n",
+    "# from shapely.geometry import shape\n",
     "\n",
     "def calc_cell_area(lon, lon_res, num_cols):\n",
     "    # TO DO: Bring in Thomas' formula\n",
@@ -206,7 +221,7 @@
     "    \n",
     "    A = 2*np.pi*R*np.abs(h1-h2) / num_cols\n",
     "    \n",
-    "    print(\"lon:\", lon, \", area:\", A)\n",
+    "    #print(\"lon:\", lon, \", area:\", A)\n",
     "    return(A)\n",
     "\n",
     "def create_areal_raster(file_name, start_lat, start_lon, end_lat, end_lon, resolution, col_vector=True):\n",
@@ -238,13 +253,13 @@
     "        \n",
     "        areas = []\n",
     "        \n",
-    "        for j in range(start_lat,end_lat,-resolution):  #just northern hemisphere\n",
+    "        for j in np.arange(start_lat,end_lat,-resolution):  #just northern hemisphere\n",
     "            areas.append(calc_cell_area(j,resolution,num_cols))\n",
     "            \n",
-    "        print(areas)\n",
+    "        #print(areas)\n",
     "        areas = np.repeat(areas, num_cols)\n",
     "        AREA_VAR = np.reshape(areas, -1)\n",
-    "        print(AREA_VAR)\n",
+    "        #print(AREA_VAR)\n",
     "        \n",
     "        cell_area = Data.createVariable('cell_area', 'f4', 'dim_data_col_vector')            \n",
     "        cell_area[:] = AREA_VAR\n",
@@ -257,8 +272,38 @@
     "    Data.close()\n",
     "    \n",
     "    \n",
-    "os.chdir(\"/Users/nathansuberi/Desktop/RW_Data/\")\n",
-    "create_areal_raster(\"./test_areal_raster24.nc\", 90, -180, -90, 180, 1, col_vector=True)"
+    "os.chdir(\"/Users/nathansuberi/Desktop/RW_Data/Areal_Rasters/\")\n",
+    "\n",
+    "raster_set = {\n",
+    "    \"./1_degree_areal_raster.nc\":1,\n",
+    "    \"./30_arc_minute_areal_raster.nc\":1/2.,\n",
+    "    \"./15_arc_minute_areal_raster.nc\":1/4.,\n",
+    "    \"./5_arc_minute_areal_raster.nc\":1/12.,\n",
+    "    \"./3_arc_minute_areal_raster.nc\":1/20.,\n",
+    "    \"./1_arc_minute_areal_raster.nc\":1/60.,\n",
+    "    \"./30_arc_second_areal_raster.nc\":1/120.,\n",
+    "    \"./15_arc_second_areal_raster.nc\":1/240.,\n",
+    "    \"./5_arc_second_areal_raster.nc\":1/720.,\n",
+    "    \"./3_arc_second_areal_raster.nc\":1/1200.,\n",
+    "    \"./1_arc_second_areal_raster.nc\":1/3600.,   \n",
+    "}\n",
+    "\n",
+    "for file_name, resolution in raster_set.items():\n",
+    "    areal_rasters_args = {\n",
+    "        \"file_name\":file_name, \n",
+    "        \"start_lat\": 90, \n",
+    "        \"start_lon\": -180, \n",
+    "        \"end_lat\": -90, \n",
+    "        \"end_lon\": 180, \n",
+    "        \"resolution\":resolution, \n",
+    "        \"col_vector\":True\n",
+    "        }\n",
+    "    \n",
+    "    try:\n",
+    "        create_areal_raster(**areal_rasters_args)\n",
+    "        print(\"Done\")\n",
+    "    except:\n",
+    "        print(\"File already exists - permission denied.\")"
    ]
   },
   {
@@ -35198,6 +35243,233 @@
     "        df.loc[selection, \"Fitted Model Tame\"] = lm_tame\n",
     "        df.loc[selection, \"Model Residual\"] = std_devs_tame\n",
     "        df.loc[selection, \"Model Std Error of Residuals\"] = resid_std_dev_tame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adm0_id</th>\n",
+       "      <th>adm0_name</th>\n",
+       "      <th>adm1_id</th>\n",
+       "      <th>adm1_name</th>\n",
+       "      <th>mkt_id</th>\n",
+       "      <th>mkt_name</th>\n",
+       "      <th>cm_id</th>\n",
+       "      <th>cm_name</th>\n",
+       "      <th>cur_id</th>\n",
+       "      <th>cur_name</th>\n",
+       "      <th>pt_id</th>\n",
+       "      <th>pt_name</th>\n",
+       "      <th>um_id</th>\n",
+       "      <th>um_name</th>\n",
+       "      <th>mp_month</th>\n",
+       "      <th>mp_year</th>\n",
+       "      <th>mp_price</th>\n",
+       "      <th>mp_commoditysource</th>\n",
+       "      <th>ALPS</th>\n",
+       "      <th>Fitted Model</th>\n",
+       "      <th>Fitted Model Tame</th>\n",
+       "      <th>Model Residual</th>\n",
+       "      <th>Model Std Error of Residuals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>272</td>\n",
+       "      <td>Badakhshan</td>\n",
+       "      <td>266</td>\n",
+       "      <td>Fayzabad</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Bread</td>\n",
+       "      <td>87</td>\n",
+       "      <td>AFN</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>5</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>WFP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>272</td>\n",
+       "      <td>Badakhshan</td>\n",
+       "      <td>266</td>\n",
+       "      <td>Fayzabad</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Bread</td>\n",
+       "      <td>87</td>\n",
+       "      <td>AFN</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>5</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>WFP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>272</td>\n",
+       "      <td>Badakhshan</td>\n",
+       "      <td>266</td>\n",
+       "      <td>Fayzabad</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Bread</td>\n",
+       "      <td>87</td>\n",
+       "      <td>AFN</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>5</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>WFP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>272</td>\n",
+       "      <td>Badakhshan</td>\n",
+       "      <td>266</td>\n",
+       "      <td>Fayzabad</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Bread</td>\n",
+       "      <td>87</td>\n",
+       "      <td>AFN</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>5</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>WFP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>272</td>\n",
+       "      <td>Badakhshan</td>\n",
+       "      <td>266</td>\n",
+       "      <td>Fayzabad</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Bread</td>\n",
+       "      <td>87</td>\n",
+       "      <td>AFN</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Retail</td>\n",
+       "      <td>5</td>\n",
+       "      <td>KG</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>WFP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   adm0_id    adm0_name  adm1_id   adm1_name  mkt_id  mkt_name  cm_id cm_name  \\\n",
+       "0        1  Afghanistan      272  Badakhshan     266  Fayzabad     55   Bread   \n",
+       "1        1  Afghanistan      272  Badakhshan     266  Fayzabad     55   Bread   \n",
+       "2        1  Afghanistan      272  Badakhshan     266  Fayzabad     55   Bread   \n",
+       "3        1  Afghanistan      272  Badakhshan     266  Fayzabad     55   Bread   \n",
+       "4        1  Afghanistan      272  Badakhshan     266  Fayzabad     55   Bread   \n",
+       "\n",
+       "   cur_id cur_name  pt_id pt_name  um_id um_name  mp_month  mp_year  mp_price  \\\n",
+       "0      87      AFN     15  Retail      5      KG         1     2014      50.0   \n",
+       "1      87      AFN     15  Retail      5      KG         2     2014      50.0   \n",
+       "2      87      AFN     15  Retail      5      KG         3     2014      50.0   \n",
+       "3      87      AFN     15  Retail      5      KG         4     2014      50.0   \n",
+       "4      87      AFN     15  Retail      5      KG         5     2014      50.0   \n",
+       "\n",
+       "  mp_commoditysource ALPS Fitted Model Fitted Model Tame  Model Residual  \\\n",
+       "0                WFP  NaN          NaN               NaN             NaN   \n",
+       "1                WFP  NaN          NaN               NaN             NaN   \n",
+       "2                WFP  NaN          NaN               NaN             NaN   \n",
+       "3                WFP  NaN          NaN               NaN             NaN   \n",
+       "4                WFP  NaN          NaN               NaN             NaN   \n",
+       "\n",
+       "   Model Std Error of Residuals  \n",
+       "0                           NaN  \n",
+       "1                           NaN  \n",
+       "2                           NaN  \n",
+       "3                           NaN  \n",
+       "4                           NaN  "
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wfp_food_price_data.head()"
    ]
   },
   {
