--- a/Data Access Assistance/Python Pandas Tutorial.ipynb
+++ b/Data Access Assistance/Python Pandas Tutorial.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "#import geopandas as gpd"
    ]
   },
   {
@@ -35,13 +36,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row1</th>\n",
+       "      <th>row2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hello</td>\n",
+       "      <td>World</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Hello</td>\n",
+       "      <td>World</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    row1   row2\n",
+       "1  Hello  World\n",
+       "2  Hello  World"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Practice here"
+    "# Practice here\n",
+    "\n",
+    "rows = {\n",
+    "    \"row1\": \"Hello\",\n",
+    "    \"row2\": \"World\"\n",
+    "}\n",
+    "\n",
+    "pd.DataFrame(rows, index=[1,2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>col1</th>\n",
+       "      <th>col2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   col1  col2\n",
+       "1     2     5\n",
+       "2     3     6"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "df.loc[0, \"col1\"]\n",
+    "\n",
+    "df[[False, True, True]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    False\n",
+       "1     True\n",
+       "2    False\n",
+       "Name: col1, dtype: bool"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"col1\"]==2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   col1  col2\n",
+      "0     1     4\n",
+      "1     2     5\n",
+      "2     3     6\n",
+      "[(1, 4), (2, 5), (3, 6)]\n",
+      "[(1, 2, 3), (4, 5, 6)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "df = pd.DataFrame({\"col1\":a, \"col2\":b})\n",
+    "print(df)\n",
+    "\n",
+    "\n",
+    "c = list(zip(a,b))\n",
+    "print(c)\n",
+    "d = list(zip(*c))\n",
+    "print(d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [4, 5, 6]]\n",
+      "[(1, 4), (2, 5), (3, 6)]\n",
+      "[([1, 2, 3],), ([4, 5, 6],)]\n",
+      "[(1, 4), (2, 5), (3, 6)]\n",
+      "[(1, 2, 3), (4, 5, 6)]\n",
+      "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n",
+      "[(1, 4, 7), (2, 5, 8), (3, 6, 9)]\n",
+      "[([1, 2, 3],), ([4, 5, 6],), ([7, 8, 9],)]\n",
+      "[(1, 4, 7), (2, 5, 8), (3, 6, 9)]\n",
+      "[(1, 2, 3), (4, 5, 6), (7, 8, 9)]\n",
+      "[(1, 10), (2, 11), (3, 12)]\n",
+      "[(1, 2, 3), (10, 11, 12)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = [4,5,6]\n",
+    "print(list([a,b]))\n",
+    "print(list(zip(a,b)))\n",
+    "print(list(zip([a,b])))\n",
+    "print(list(zip(*[a,b])))\n",
+    "print(list(zip(*zip(a,b))))\n",
+    "c = [7,8,9]\n",
+    "print(list([a,b,c]))\n",
+    "print(list(zip(a,b,c)))\n",
+    "print(list(zip([a,b,c])))\n",
+    "print(list(zip(*[a,b,c])))\n",
+    "print(list(zip(*zip(a,b,c))))\n",
+    "d = [10,11,12,13,15]\n",
+    "print(list(zip(a,d)))\n",
+    "print(list(zip(*zip(a,d))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "too many values to unpack (expected 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-69-a7011839c67e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"col1sq\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"col2cu\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcol1\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcol2\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: too many values to unpack (expected 2)"
+     ]
+    }
+   ],
+   "source": [
+    "df[\"col1sq\"], df[\"col2cu\"] = df.apply(lambda row: (row.col1**2, row.col2**3), axis=1)"
    ]
   },
   {
