--- a/Near Real Time data procedures/Smoke Data for US.ipynb
+++ b/Near Real Time data procedures/Smoke Data for US.ipynb
@@ -70,11 +70,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[b'drwxrwxr-x    2 5251     554        446464 Oct 25 20:50 ARCHIVE',\n",
+       " b'-rw-r--r--    1 5251     554         83969 Oct 24 12:33 hms_fire20171023.dbf',\n",
+       " b'-rw-r--r--    1 5251     554         83969 Oct 24 11:47 hms_fire20171023.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554         36724 Oct 24 11:47 hms_fire20171023.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554         10564 Oct 24 11:47 hms_fire20171023.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554         35146 Oct 24 11:50 hms_fire20171023.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554         36724 Oct 24 12:33 hms_fire20171023.shp',\n",
+       " b'-rw-r--r--    1 5251     554         10564 Oct 24 12:33 hms_fire20171023.shx',\n",
+       " b'-rw-r--r--    1 5251     554         35104 Oct 24 12:35 hms_fire20171023.zip',\n",
+       " b'-rw-r--r--    1 5251     554        134977 Oct 25 12:42 hms_fire20171024.dbf',\n",
+       " b'-rw-r--r--    1 5251     554        134977 Oct 25 11:57 hms_fire20171024.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554         59040 Oct 25 11:57 hms_fire20171024.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554         16940 Oct 25 11:57 hms_fire20171024.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554         55767 Oct 25 12:02 hms_fire20171024.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554         59040 Oct 25 12:42 hms_fire20171024.shp',\n",
+       " b'-rw-r--r--    1 5251     554         16940 Oct 25 12:42 hms_fire20171024.shx',\n",
+       " b'-rw-r--r--    1 5251     554         55725 Oct 25 12:46 hms_fire20171024.zip',\n",
+       " b'-rw-r--r--    1 5251     554         35073 Oct 25 19:59 hms_fire20171025.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554         15332 Oct 25 19:59 hms_fire20171025.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554          4452 Oct 25 19:59 hms_fire20171025.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554         12707 Oct 25 19:45 hms_fire20171025.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554          5257 Oct 24 12:33 hms_smoke20171023.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          5257 Oct 24 11:47 hms_smoke20171023.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554         24244 Oct 24 11:47 hms_smoke20171023.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554           884 Oct 24 11:47 hms_smoke20171023.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554         17519 Oct 24 03:15 hms_smoke20171023.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554         24244 Oct 24 12:33 hms_smoke20171023.shp',\n",
+       " b'-rw-r--r--    1 5251     554           884 Oct 24 12:33 hms_smoke20171023.shx',\n",
+       " b'-rw-r--r--    1 5251     554         17477 Oct 24 12:35 hms_smoke20171023.zip',\n",
+       " b'-rw-r--r--    1 5251     554          4633 Oct 25 12:42 hms_smoke20171024.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          4633 Oct 25 11:57 hms_smoke20171024.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554         27476 Oct 25 11:57 hms_smoke20171024.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554           788 Oct 25 11:57 hms_smoke20171024.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554         20803 Oct 25 03:46 hms_smoke20171024.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554         27476 Oct 25 12:42 hms_smoke20171024.shp',\n",
+       " b'-rw-r--r--    1 5251     554           788 Oct 25 12:42 hms_smoke20171024.shx',\n",
+       " b'-rw-r--r--    1 5251     554         20761 Oct 25 12:46 hms_smoke20171024.zip',\n",
+       " b'-rw-r--r--    1 5251     554          2397 Oct 25 19:59 hms_smoke20171025.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          9212 Oct 25 19:59 hms_smoke20171025.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554           444 Oct 25 19:59 hms_smoke20171025.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554          7190 Oct 25 19:05 hms_smoke20171025.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554           708 Oct 25 20:50 hmsgislist',\n",
+       " b'-rw-r--r--    1 5251     554          3457 Oct 24 12:33 hysplit20171023.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          3457 Oct 24 11:47 hysplit20171023.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          2788 Oct 24 11:47 hysplit20171023.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554           868 Oct 24 11:47 hysplit20171023.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554          3721 Oct 24 03:15 hysplit20171023.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554          2788 Oct 24 12:33 hysplit20171023.shp',\n",
+       " b'-rw-r--r--    1 5251     554           868 Oct 24 12:33 hysplit20171023.shx',\n",
+       " b'-rw-r--r--    1 5251     554          3679 Oct 24 12:35 hysplit20171023.zip',\n",
+       " b'-rw-r--r--    1 5251     554          9509 Oct 25 12:42 hysplit20171024.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          9509 Oct 25 11:57 hysplit20171024.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          7772 Oct 25 11:57 hysplit20171024.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554          2292 Oct 25 11:57 hysplit20171024.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554          7776 Oct 25 03:46 hysplit20171024.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554          7772 Oct 25 12:42 hysplit20171024.shp',\n",
+       " b'-rw-r--r--    1 5251     554          2292 Oct 25 12:42 hysplit20171024.shx',\n",
+       " b'-rw-r--r--    1 5251     554          7734 Oct 25 12:46 hysplit20171024.zip',\n",
+       " b'-rw-r--r--    1 5251     554          1417 Oct 25 19:59 hysplit20171025.prelim.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          1108 Oct 25 19:59 hysplit20171025.prelim.shp',\n",
+       " b'-rw-r--r--    1 5251     554           388 Oct 25 19:59 hysplit20171025.prelim.shx',\n",
+       " b'-rw-r--r--    1 5251     554          1907 Oct 25 19:05 hysplit20171025.prelim.zip',\n",
+       " b'-rw-r--r--    1 5251     554         35073 Oct 25 20:50 latest_fire.dbf',\n",
+       " b'-rw-r--r--    1 5251     554         15332 Oct 25 20:50 latest_fire.shp',\n",
+       " b'-rw-r--r--    1 5251     554          4452 Oct 25 20:50 latest_fire.shx',\n",
+       " b'-rw-r--r--    1 5251     554         12707 Oct 25 20:50 latest_fire.zip',\n",
+       " b'-rw-r--r--    1 5251     554          2397 Oct 25 20:50 latest_smoke.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          9212 Oct 25 20:50 latest_smoke.shp',\n",
+       " b'-rw-r--r--    1 5251     554           444 Oct 25 20:50 latest_smoke.shx',\n",
+       " b'-rw-r--r--    1 5251     554          7190 Oct 25 20:50 latest_smoke.zip',\n",
+       " b'-rw-r--r--    1 5251     554          1417 Oct 25 20:50 latesthysplit.dbf',\n",
+       " b'-rw-r--r--    1 5251     554          1108 Oct 25 20:50 latesthysplit.shp',\n",
+       " b'-rw-r--r--    1 5251     554           388 Oct 25 20:50 latesthysplit.shx',\n",
+       " b'-rw-r--r--    1 5251     554          1907 Oct 25 20:50 latesthysplit.zip',\n",
+       " b'-rw-r--r--    1 5251     554           108 Jun 07 22:00 see']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# View smoke data files available on ftp\n",
     "file = obj_req.urlopen(remote_path).read().splitlines()\n",
@@ -92,12 +177,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171019.prelim.shp\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171019.prelim.shx\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171019.prelim.dbf\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171019.prelim.shp\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171019.prelim.shx\n",
-      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171019.prelim.dbf\n"
+      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171024.prelim.shp\n",
+      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171024.prelim.shx\n",
+      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_smoke/hms_smoke20171024.prelim.dbf\n",
+      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171024.prelim.shp\n",
+      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171024.prelim.shx\n",
+      "/Users/nathansuberi/Desktop/RW_Data/Smoke/yesterday_fire/hms_fire20171024.prelim.dbf\n"
      ]
     }
    ],
@@ -155,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -164,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "yesterday_fire_shapefile.zip  84017 / 84017.0  (100.00%))"
+      "yesterday_fire_shapefile.zip  55394 / 55394.0  (100.00%))"
      ]
     }
    ],
@@ -198,9 +283,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -280,26 +365,26 @@
       "job name: https://common-data.cartodb.com/api/v2/sql?q=select+*+from+%22ne_10m_populated_places_simple%22&format=shp&filename=ne_10m_populated_places_simple\n",
       "job id: 43760ccc-55a7-11e7-80fc-0ecd1babdde5\n",
       "job position: 24\n",
-      "job name: https://wri-public-data.s3.amazonaws.com/resourcewatch/yesterday_fire_shapefile.zip\n",
-      "job id: 23e4af68-b5aa-11e7-97e7-0e7f7e78c96c\n",
-      "job position: 25\n",
-      "job name: https://s3.amazonaws.com/rw-nrt-scripts/soil_moisture.tif\n",
-      "job id: 97e4195a-5a86-11e7-8e32-0e233c30368f\n",
-      "job position: 26\n",
-      "job name: https://s3.amazonaws.com/rw-nrt-scripts/air_temo_anomalies.tif\n",
-      "job id: b9cc4f66-5a85-11e7-9912-0ee66e2c9693\n",
-      "job position: 27\n",
-      "job name: https://s3.amazonaws.com/rw-nrt-scripts/reefs_alerts.geojson\n",
-      "job id: 94014fa8-5c23-11e7-bb96-0e3ebc282e83\n",
-      "job position: 28\n",
-      "job name: https://incidentnews.noaa.gov/raw/incidents.csv\n",
-      "job id: 68d6fe0a-a93e-11e7-9260-0e3d8ed682ca\n",
-      "job position: 29\n",
-      "job name: https://missingmigrants.iom.int/downloads\n",
-      "job id: b5ff6546-a943-11e7-8c1c-0e831088b0bc\n",
-      "job position: 30\n",
       "job name: https://s3.amazonaws.com/rw-nrt-scripts/modis.tif\n",
       "job id: d4586732-5b4a-11e7-bb68-0e3ff518bd15\n",
+      "job position: 25\n",
+      "job name: https://wri-public-data.s3.amazonaws.com/resourcewatch/yesterday_fire_shapefile.zip\n",
+      "job id: 23e4af68-b5aa-11e7-97e7-0e7f7e78c96c\n",
+      "job position: 26\n",
+      "job name: https://s3.amazonaws.com/rw-nrt-scripts/soil_moisture.tif\n",
+      "job id: 97e4195a-5a86-11e7-8e32-0e233c30368f\n",
+      "job position: 27\n",
+      "job name: https://s3.amazonaws.com/rw-nrt-scripts/air_temo_anomalies.tif\n",
+      "job id: b9cc4f66-5a85-11e7-9912-0ee66e2c9693\n",
+      "job position: 28\n",
+      "job name: https://s3.amazonaws.com/rw-nrt-scripts/reefs_alerts.geojson\n",
+      "job id: 94014fa8-5c23-11e7-bb96-0e3ebc282e83\n",
+      "job position: 29\n",
+      "job name: https://incidentnews.noaa.gov/raw/incidents.csv\n",
+      "job id: 68d6fe0a-a93e-11e7-9260-0e3d8ed682ca\n",
+      "job position: 30\n",
+      "job name: https://missingmigrants.iom.int/downloads\n",
+      "job id: b5ff6546-a943-11e7-8c1c-0e831088b0bc\n",
       "job position: 31\n",
       "job name: https://ngdc.noaa.gov/nndc/struts/results?type_0=Exact&query_0=$ID&t=101650&s=69&d=59&dfn=tsevent.txt\n",
       "job id: 12bd16aa-a9d2-11e7-8519-0e831088b0bc\n",
@@ -398,20 +483,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "smoke: {\"data_import\":{\"endpoint\":\"/api/v1/imports\",\"item_queue_id\":\"c01aa8fb-f4a6-4aa1-af69-718ad2c1d8a3\"},\"id\":\"23d4afc8-b5aa-11e7-9a39-0e831088b0bc\",\"name\":null,\"interval\":86400,\"url\":\"https://wri-public-data.s3.amazonaws.com/resourcewatch/yesterday_smoke_shapefile.zip\",\"state\":\"created\",\"user_id\":\"c73d7d4a-5ff5-4d7c-bfb8-53dd1a6ce8f9\",\"created_at\":\"2017-10-20T15:20:00+00:00\",\"updated_at\":\"2017-10-20T15:20:00+00:00\",\"run_at\":\"2017-10-21T15:20:00+00:00\",\"ran_at\":\"2017-10-20T15:20:00+00:00\",\"modified_at\":null,\"etag\":null,\"checksum\":\"\",\"log_id\":null,\"error_code\":null,\"error_message\":null,\"retried_times\":0,\"service_name\":null,\"service_item_id\":null,\"type_guessing\":true,\"quoted_fields_guessing\":true,\"content_guessing\":false,\"visualization_id\":null,\"from_external_source\":false}\n",
-      "fire: {\"data_import\":{\"endpoint\":\"/api/v1/imports\",\"item_queue_id\":\"657efeb0-57a8-4ad3-bfd1-02cba4296e8a\"},\"id\":\"23e4af68-b5aa-11e7-97e7-0e7f7e78c96c\",\"name\":null,\"interval\":86400,\"url\":\"https://wri-public-data.s3.amazonaws.com/resourcewatch/yesterday_fire_shapefile.zip\",\"state\":\"created\",\"user_id\":\"c73d7d4a-5ff5-4d7c-bfb8-53dd1a6ce8f9\",\"created_at\":\"2017-10-20T15:20:00+00:00\",\"updated_at\":\"2017-10-20T15:20:00+00:00\",\"run_at\":\"2017-10-21T15:20:00+00:00\",\"ran_at\":\"2017-10-20T15:20:00+00:00\",\"modified_at\":null,\"etag\":null,\"checksum\":\"\",\"log_id\":null,\"error_code\":null,\"error_message\":null,\"retried_times\":0,\"service_name\":null,\"service_item_id\":null,\"type_guessing\":true,\"quoted_fields_guessing\":true,\"content_guessing\":false,\"visualization_id\":null,\"from_external_source\":false}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sync carto table with S3 url\n",
     "# ONLY NEED TO RUN THIS ONCE\n",
