update WFP, GHG/GDP, and CDIAC play notebooks

--- a/Notebooks for Exploring Specific Datasets/World Food Programme Data.ipynb
+++ b/Notebooks for Exploring Specific Datasets/World Food Programme Data.ipynb
@@ -2990,7 +2990,11 @@
     "    \n",
     "    title = \"Alerts for Price Spikes - level \"+alert_level+\" in \"+alert_year\n",
     "    provider = \"cartodb\"\n",
-    "    description = \"This shows the number of markets at alert level \"+alert_level+\" from the WFP, in the year \"+alert_year\n",
+    "    description = \"This shows the number of markets at alert level \"+alert_level+\" from the WFP, in the year \"+alert_year+\\\n",
+    "    \". The current ALPS value for a food commodity is the number of standard deviations the current price is above the \"+\\\n",
+    "    \"commodity's expected price for that month. Based on this ALPS value, markets are assigned to 1 of 4 situations, where \"+\\\n",
+    "    \"all nominal values are measured in standard deviations from the seasonal mean price: Normal (white), ALPS < 0.25 Stress \"+\\\n",
+    "    \"(yellow), 0.25 < ALPS < 1 Alert (orange), 1 < ALPS < 2 Crisis (red), ALPS >= 2.\"\n",
     "    # Is this the dataset or layer slug?\n",
     "    slug = ''\n",
     "\n",
