add another reference for prefix / delimiter

--- a/Near Real Time data procedures/Using Boto3 to access S3.ipynb
+++ b/Near Real Time data procedures/Using Boto3 to access S3.ipynb
@@ -78,7 +78,9 @@
     "\n",
     "Also, look over for the reference to \"hooking into the events\" to register a change in the client config (in this case, allow to send messages through boto3 without signing what you send with an SSL certificate).\n",
     "\n",
-    "Listing the top level contents of a s3 bucket with Prefix and Delimiter: https://github.com/boto/boto3/issues/134"
+    "Listing the top level contents of a s3 bucket with Prefix and Delimiter: https://github.com/boto/boto3/issues/134\n",
+    "\n",
+    "Another exploration of Prefix and Delimiter: https://realguess.net/2014/05/24/amazon-s3-delimiter-and-prefix/"
    ]
   },
   {
