update header for text block

--- a/Near Real Time data procedures/Monitoring updates to S3 from CRON jobs.ipynb
+++ b/Near Real Time data procedures/Monitoring updates to S3 from CRON jobs.ipynb
@@ -1314,7 +1314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Francis' Notes on handling NRT data:\n",
+    "# Francis' Notes on handling NRT data:\n",
     "\n",
     "<u>What data might users want?</u>\n",
     "<ul>\n",
