make column names strings in wide form

--- a/Notebooks for Exploring Specific Datasets/Converting between long and wide form - Carto.ipynb
+++ b/Notebooks for Exploring Specific Datasets/Converting between long and wide form - Carto.ipynb
@@ -1802,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1823,6 +1823,8 @@
     "    wide_form = wide_form.reset_index()\n",
     "    wide_form[\"ISO3\"] = list(map(add_iso, wide_form[\"Country Name\"]))\n",
     "    wide_form = wide_form[pd.notnull(wide_form[\"ISO3\"])]\n",
+    "    # Carto doesn't except column names that are numbers! \n",
+    "    wide_form.columns = [\"yr_\" + str(col) for col in wide_form.columns]\n",
     "    write_to_S3(wide_form, s3_bucket, WB_DATA + \"wb_data_wide_{}.csv\".format(name.replace(\" \", \"_\")))"
    ]
   }
